--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -3,8 +3,25 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 5rem;
+  width: 5rem;
   align-items: center;
   justify-content: center;
+}
+
+.Logo:hover {
+  -webkit-filter: invert(100%) !important;
+    animation-name: spin;
+    animation-duration: 5000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
 }
