--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -14,3 +14,13 @@
 .Nav .Logo {
   margin-right: 3rem;
 }
+
+.jmLink {
+  line-height: 13px;
+}
+
+@media screen and (max-width: 486px) {
+  #JML {
+    width: 90px;
+  }
+}
