--- a/src/views/SinglePost.css
+++ b/src/views/SinglePost.css
@@ -56,6 +56,22 @@
   .SinglePost--Content {
     padding: 4rem 2rem;
   }
+
+  #nextPost {
+    margin-left: 89% !important;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  #nextPost {
+    margin-left: 86% !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #nextPost {
+    margin-left: 80% !important;
+  }
 }
 
 .SinglePost--Meta {
