--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -2,9 +2,10 @@
 }
 
 .homeLinkWrap {
-    font-size: 1.5vmax !important;
-    line-height: 1.75vmax;
-    margin-top: -25px;
+    margin-top: -40px;
+    margin-bottom: -40px;
+    font-size: 22px !important;
+    line-height: 22px;
 }
 
 .homeLinks {
@@ -13,4 +14,11 @@
 
 .homeLinks:hover {
     color: #ff00ff;
+}
+
+@media screen and (max-width: 830px) {
+    .homeLinkWrap {
+        font-size: 18px !important;
+        line-height: 22px;
+    }
 }
